@@ -575,6 +575,9 @@ margins and normal text font.  Pair with \code{@end format}.}
 \txicmd{@flushleft}{}{Left justify lines: do not fill text, retain normal margins and normal text font. Pair with \code{@end flushleft}.}
 \txicmd{@flushright}{}{Right justify lines, leaving the left end ragged: do not fill text, retain normal margins and normal text font. Pair with \code{@end flushright}.}
 \txicmd{@quotation}{}{Narrow both margins to indicate text that is quoted from another work; do normal line breaking and retain normal font. Takes optional argument of prefix text. Pair with \code{@end quotation}.}
+\txicmd{@raggedright}{}{Left justify lines, leaving the right end ragged: fill text, retain normal text font. Pair with \code{@end raggedright}.}
+\txicmd{@raggedleft}{}{Right justify lines, leaving the left end ragged: fill text, retain normal text font. Pair with \code{@end raggedleft}.}
+\txicmd{@raggedcenter}{}{Center lines: fill text, retain normal text font. Pair with \code{@end raggedcenter}.}
 \txicmd{@smallquotation}{}{Like \code{@quotation}, but select a smaller (text) font where possible.  Pair with \code{@end quotation}.}
 
 \subsection{Displays using fixed-width fonts}
