@@ -308,6 +308,9 @@ COMMAND command_table[] = {
   { "quoteright", cm_quoteright, BRACE_ARGS },
   { "quotesinglbase", cm_quotesinglbase, BRACE_ARGS },
   { "r", cm_r, BRACE_ARGS },
+  { "raggedcenter", cm_raggedcenter, NO_BRACE_ARGS },
+  { "raggedleft", cm_raggedleft, NO_BRACE_ARGS },
+  { "raggedright", cm_raggedright, NO_BRACE_ARGS },
   { "raisesections", cm_raisesections, NO_BRACE_ARGS },
   { "ref", cm_ref, BRACE_ARGS },
   { "refill", cm_no_op, NO_BRACE_ARGS },
