@@ -30,7 +30,8 @@ enum insertion_type
   example, floatenv, flushleft, flushright, format, ftable, group,
   ifclear, ifdocbook, ifhtml, ifinfo, ifnotdocbook, ifnothtml, ifnotinfo,
   ifnotplaintext, ifnottex, ifnotxml, ifplaintext, ifset, iftex, ifxml,
-  itemize, lisp, menu, multitable, quotation, rawdocbook, rawhtml, rawtex,
+  itemize, lisp, menu, multitable, quotation, raggedcenter, raggedleft,
+  raggedright, rawdocbook, rawhtml, rawtex,
   rawxml, smalldisplay, smallexample, smallformat, smalllisp, verbatim,
   table, tex, vtable, titlepage, bad_type
 };
