@@ -1,3 +1,12 @@
+2008-12-31  Oleg Katsitadze  <olegkat@gmail.com>
+	* doc/texinfo.tex (@raggedright, @raggedleft, @raggedcenter):  New
+	commands.
+	* makeinfo/cmds.c, makeinfo/cmds.h, makeinfo/insertion.c:
+	* makeinfo/insertion.h:
+	Likewise.
+	* doc/texinfo.txi:  Updated documentation.
+	* doc/refcard/txirefcard.tex:  Updated.
+
 2008-12-29  Karl Berry  <karl@gnu.org>
 
 	* info/window.c (process_node_text): use size_t for mb variables
